@@ -30,7 +30,7 @@ Block MASS                      # Mass spectrum
         35     7.21766055e+02   # H0
         36     7.21491574e+02   # A0
         37     7.26197129e+02   # H+
-   1000021     1.24713681e+03   # ~g
+   1000021     1.14713681e+03   # ~g
    1000022     2.04229710e+02   # ~neutralino(1)
    1000023     3.86195610e+02   # ~neutralino(2)
    1000024     3.86389520e+02   # ~chargino(1)
