@@ -42,7 +42,7 @@ Block MASS                      # Mass spectrum
         35     7.11115245e+02   # H0
         36     7.10834021e+02   # A0
         37     7.15610423e+02   # H+
-   1000021     1.25314287e+03   # ~g
+   1000021     1.15314287e+03   # ~g
    1000022     2.04192381e+02   # ~neutralino(1)
    1000023     3.85335128e+02   # ~neutralino(2)
    1000024     3.85516124e+02   # ~chargino(1)
