@@ -1,2 +1,3 @@
 1. 31/1/13: Fixed 2 loop small error in m3^2 RGE (two loops)
-
+2. 4/1/13: Re-instated MIXING=-1 option for MssmSoftsusy objects after request
+from user. Don't use with flavour mixing though.
